# eslint-fix-import-extensions

./: .gitignore  License.txt  Readme.md  Readme.org  eslint-fix-import-extensions.cabal  flake.nix
app/: Header.hs  Imports.hs  Main.hs  Parse.hs  Replace.hs
data/: linter-out.txt  replacements.txt
