cabal-version:      3.4
name:               eslint-fix-import-extensions
version:            0.1.0.1
synopsis:           Fix import extensions
description:
  Please see the README at <https://github.com/dschrempf/eslint-fix-import-extensions#readme>

category:           Math, Statistics
homepage:
  https://github.com/dschrempf/eslint-fix-import-extensions#readme

bug-reports:
  https://github.com/dschrempf/eslint-fix-import-extensions/issues

author:             Dominik Schrempf
maintainer:         dominik.schrempf@gmail.com
copyright:          2024 Dominik Schrempf
license:            GPL-3.0-or-later
license-file:       License.txt
build-type:         Simple
extra-doc-files:
  Changelog.md
  Readme.md

extra-source-files:
data-files:

source-repository head
  location: https://github.com/dschrempf/eslint-fix-import-extensions
  type:     git

common common
  default-extensions:

common lib
  default-language: GHC2021
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common test
  default-language: GHC2021
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common bench
  default-language: GHC2021
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common exec
  default-language: GHC2021
  ghc-options:
    -Wall -Wunused-packages -Wredundant-constraints -threaded -rtsopts
    -with-rtsopts=-N

executable fix-imports
  import:          common, exec
  main-is:         Main.hs
  hs-source-dirs:  app
  other-modules:
    Imports
    Parse
    Replace

  autogen-modules:
  ghc-options:
  build-depends:
    , attoparsec
    , base        >=4.7 && <5
    , directory
    , filepath
    , text
